--- a/004-entrada e saida de dados/004-entrada e saida de dados.cbp
+++ b/004-entrada e saida de dados/004-entrada e saida de dados.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="003-tabuada 16 simples" />
+		<Option title="004-entrada e saida de dados" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/003" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/004-entrada e saida de dados" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/003" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/004-entrada e saida de dados" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
